# kj

./: .gitignore  README.md  default.nix  kj.cabal  stack.yaml
completions/: kj.fish  kj.plugin.zsh  kj.sh
src/: Dir.hs  Main.hs  Parse.hs  Types.hs
