name:                kj
version:             0.2.0.0
author:              steventlamb
maintainer:          steventlamb@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kj
  hs-source-dirs:      src
  if os(darwin)
     ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
  else
     ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N -optl-pthread -static -optl-static
  main-is:             Main.hs
  other-modules:       Parse
                     , Dir
  default-language:    Haskell2010
  build-depends:       base
                     , options==1.2.1.1
                     , process==1.2.3.0
                     , directory==1.2.2.0
                     , aeson==0.11.2.0
                     , filepath==1.4.0.0
                     , bytestring==0.10.6.0
                     , parsec==3.1.11
