name:                kj
version:             0.2.0.2
author:              steventlamb
maintainer:          steventlamb@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kj
  hs-source-dirs:      src
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
  -- TODO: move the following to a makefile instead
  -- enable the following in order to produce a static binary for linux
  -- ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N -optl-pthread -static -optl-static
  main-is:             Main.hs
  other-modules:       Parse
                     , Dir
  default-language:    Haskell2010
  build-depends:       base
                     , options >= 1.2.1.1
                     , process >= 1.4.2.0
                     , directory >= 1.2.6.2
                     , aeson >= 0.11.2.1
                     , filepath >= 1.4.1.0
                     , bytestring >= 0.10.8.1
                     , parsec >= 3.1.11
