name:                kj
version:             0.2.0.2
author:              steventlamb
maintainer:          steventlamb@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable kj
  hs-source-dirs:      src
  ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
  -- TODO: move the following to a makefile instead
  -- enable the following in order to produce a static binary for linux
  -- ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N -optl-pthread -static -optl-static
  main-is:             Main.hs
  other-modules:       Parse
                     , Dir
                     , Types
  default-language:    Haskell2010
  build-depends:       base
                     , options
                     , process
                     , directory
                     , aeson
                     , filepath
                     , bytestring
                     , parsec
                     , mtl
